ID user decrement error when deleting group instance twice #49229

Closed
opened 2016-09-02 17:52:56 +02:00 by Rainer Trummer · 5 comments

System Information
Windows 7, Quadro 4000

Blender Version
Broken: 2.77.3 f7263b8
Worked: 2.77a

When instancing a group, then deleting it, then repeating the exact same process, Blender prints a ID user increment error in the console. The Group then will not be saved and lost when you reload the file.

Exact steps for others to reproduce the error
Create a group in the Factory Settings scene by selecting the Cube, hit Ctrl+G. Then, instance the group. Delete the instance. Instance the group again. Delete it again. Blender throws an error in the console. See GIF:

groupError.gif

**System Information** Windows 7, Quadro 4000 **Blender Version** Broken: 2.77.3 f7263b8 Worked: 2.77a When instancing a group, then deleting it, then repeating the exact same process, Blender prints a ID user increment error in the console. The Group then will not be saved and lost when you reload the file. **Exact steps for others to reproduce the error** Create a group in the Factory Settings scene by selecting the Cube, hit Ctrl+G. Then, instance the group. Delete the instance. Instance the group again. Delete it again. Blender throws an error in the console. See GIF: ![groupError.gif](https://archive.blender.org/developer/F350787/groupError.gif)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @RainerTrummer

Added subscriber: @RainerTrummer

#49230 was marked as duplicate of this issue

#49230 was marked as duplicate of this issue
Bastien Montagne was assigned by Sergey Sharybin 2016-09-02 18:09:23 +02:00

This issue was referenced by 27c64e3f46

This issue was referenced by 27c64e3f46395b1807ab211888b321de7e773918

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49229
No description provided.